--- a/public/css/common/fonts/lato/latin/lato_light.css
+++ b/public/css/common/fonts/lato/latin/lato_light.css
@@ -13,6 +13,7 @@
 	font-style: normal;
 	font-weight: normal;
 	text-rendering: optimizeLegibility;
+	font-display: swap;
 }
 
 /* Webfont: LatoLatin-LightItalic */
@@ -26,4 +27,5 @@
 	font-style: italic;
 	font-weight: normal;
 	text-rendering: optimizeLegibility;
+	font-display: swap;
 }
